corpus/actions.txt
===========================
Empty actions
===========================

{}
rule main = parse _ {}
{}

---

(lexer_definition
  (action (ocaml))
  (lexer_entry (lexer_entry_name) (lexer_case (any) (action (ocaml))))
  (action (ocaml)))

===========================
Header and trailer
===========================

{
module Lexer = struct
}
rule main = parse _ {}
{
end
}

---

(lexer_definition
  (action (ocaml))
  (lexer_entry (lexer_entry_name) (lexer_case (any) (action (ocaml))))
  (action (ocaml)))

===========================
Strings and comments
===========================

{"}"(*}*)(*){*)}
rule main = parse _ {}

---

(lexer_definition
  (action (ocaml))
  (lexer_entry (lexer_entry_name) (lexer_case (any) (action (ocaml)))))
